<resources>
    <string name="app_name">IMProject</string>


    <!--tab in TabLayout-->
    <string name="chatting">&#xe60c;</string>
    <string name="friend_chat">&#xe611;</string>
    <string name="group_chat">&#xe766;</string>
    <string name="share">&#xe612;</string>

    <!--toolbar-->
    <string name="menu">&#xe6c1;</string>
    <string name="left_arrow">&#xe767;</string>
    <string name="plus">&#xe614;</string>

    <!--toolbarRightPopupWindow-->
    <string name="add_new_friend">&#xe600;</string>
    <string name="scan_q_code">&#xecf0;</string>

    <!--left drawer menu-->
    <string name="setting">&#xe613;</string>
    <string name="feedback">&#xe60b;</string>
    <string name="help">&#xe6b6;</string>
    <string name="donate">&#xe60a;</string>
    <string name="social_share">&#xe861;</string>
    <string name="logout">&#xe6dc;</string>
    <string name="title_activity_basic">BasicActivity</string>


    <!--chatting room fragment-->
    <string name="more">&#xe60e;</string>
    <string name="is_user_online">&#xe662;</string>
    <string name="send_picture">&#xe6da;</string>
    <string name="send_audio">&#xe6a4;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
